Changelog

$Id$

Mon, Dec 23 2013 JoungKyun.Kim <http://oops.org>
	- release 1.0.1
	- support mysql 5.6

Fri, Sep 13 2013 JoungKyun.Kim <http://oops.org>
	- base on mysql 5.5.33 my_aes.c
	- compatible aes_encrypt/aes_decrypt native function
	- 1.0.0 release
