@@ -2,6 +2,9 @@ Changelog
 
 $Id$
 
+Tue, Dec 24 2013 JoungKyun.Kim <http://oops.org>
+	- fixed given argument with column name
+
 Mon, Dec 23 2013 JoungKyun.Kim <http://oops.org>
 	- release 1.0.1
 	- support mysql 5.6
